--- a/SpendingTracker/Web.config
+++ b/SpendingTracker/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SpendingTracker-20150925023553.mdf;Initial Catalog=aspnet-SpendingTracker-20150925023553;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="SpendingTrackerDatabaseLocal" connectionString="Server=Cameron-PC\SQLExpress; Database=SpendingTrackerDatabaseLocal; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SpendingTrackerDatabaseLocal" connectionString="Server=Cameron-PC\SQLExpress; Database=SpendingTrackerDatabaseLocal; Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
