--- a/SpendingTracker/SpendingTracker.vbproj
+++ b/SpendingTracker/SpendingTracker.vbproj
@@ -291,6 +291,7 @@
     <Content Include="Views\Transaction\EditTransaction.vbhtml" />
     <Content Include="Views\Transaction\Income.vbhtml" />
     <Content Include="Views\Transaction\Overview.vbhtml" />
+    <Content Include="Views\Shared\AddTransactionPartial.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
