--- a/SpendingTracker/SpendingTracker.vbproj
+++ b/SpendingTracker/SpendingTracker.vbproj
@@ -234,7 +234,7 @@
     <Compile Include="Services\TotalsCalculatorService.vb" />
     <Compile Include="ViewModels\AddTransactionPageViewModel.vb" />
     <Compile Include="ViewModels\AddTransactionViewModel.vb" />
-    <Compile Include="ViewModels\CategoriesViewModel.vb" />
+    <Compile Include="ViewModels\CategoryViewModel.vb" />
     <Compile Include="ViewModels\IncomePageViewModel.vb" />
     <Compile Include="ViewModels\TotalsViewModel.vb" />
     <Compile Include="ViewModels\EditTransactionViewModel.vb" />
@@ -265,7 +265,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\Categories.js" />
+    <Content Include="Scripts\category.js" />
     <Content Include="Scripts\Chart.js" />
     <Content Include="Scripts\chart.min.js" />
     <Content Include="Scripts\charts.js" />
@@ -301,6 +301,7 @@
     <Content Include="Views\Transaction\Income.vbhtml" />
     <Content Include="Views\Transaction\Overview.vbhtml" />
     <Content Include="Views\Shared\AddTransactionPartial.vbhtml" />
+    <Content Include="Views\Category\All.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
