--- a/SpendingTracker.Domain/SpendingTracker.Domain.vbproj
+++ b/SpendingTracker.Domain/SpendingTracker.Domain.vbproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\Category.vb" />
     <Compile Include="Models\SavingsTransaction.vb" />
     <Compile Include="Models\Transaction.vb" />
+    <Compile Include="Models\Vendor.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
