--- a/SpendingTracker/Web.config
+++ b/SpendingTracker/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SpendingTracker-20150925023553.mdf;Initial Catalog=aspnet-SpendingTracker-20150925023553;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SpendingTracker-20150925023553.mdf;Initial Catalog=aspnet-SpendingTracker-20150925023553;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="SpendingTrackerDatabaseLocal" connectionString="Server=Cameron-PC\SQLExpress; Database=SpendingTrackerDatabaseLocal; Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
